[gd_scene load_steps=6 format=2]

[ext_resource path="res://imagens/Image Sprites/sheet.png" type="Texture" id=1]
[ext_resource path="res://Cenas/Enemys/Tower/Torre.gd" type="Script" id=2]


[sub_resource type="CircleShape2D" id=1]
radius = 52.8903

[sub_resource type="CircleShape2D" id=2]
radius = 338.314

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( 46.1164, -2.25663, 36.5135, -28.1108, 26.9105, -36.975, 12.1367, -43.6232, -16.6722, -43.6232, -40.3102, -22.2012, -45.481, 1.43681, -38.0941, 25.8136, -21.1043, 39.8486, -1.15967, 45.7581, 18.0462, 40.5873, 32.0813, 30.9844, 36.5135, 25.8136, 39.4682, 21.3814, 41.6843, 18.4266, 43.1617, 13.2558, 43.9004, 6.60763 )

[node name="Mob" type="KinematicBody2D" groups=[
"minimap_objects",
]]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="bullet_point_enemy" type="Position2D" parent="."]
position = Vector2( 74.761, 0 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 444, 92, 91, 90 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area_Vis達o" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_Vis達o"]
visible = false
shape = SubResource( 2 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 3 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area_Vis達o" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area_Vis達o" to="." method="_on_Area2D_body_exited"]
